# Food-spoilage-detection

./: .env.example  .gitignore  Food_Spoilage_Detector_Presentation.pptx  README.md  docker-compose.yml  fix_sec2.py  generate_ppt.py  get_importances.py  inspect_docx.py  update_section_32.py
.claude/: 00_RESUME_PROMPT.md  01_ORIGINAL_BRIEF.md  02_DECISIONS.md  03_BUILD_LOG.md  04_PROJECT_STATE.md  05_KNOWN_ISSUES.md  06_ENV_DETAILS.md  07_CHEATSHEET.md  README.md  inventory.txt
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: health.py  predict.py  predict_csv.py  predict_seq.py  simulate.py  stream.py
backend/app/core/: config.py  schemas.py
backend/app/data_source/: base.py  mqtt_stub.py  simulator.py
backend/app/ml/: model.py  preprocess.py  traffic_light.py
backend/tests/: conftest.py  test_api.py  test_model.py  test_simulator.py
data/references/: banana_postharvest_constants.json
docs/: API.md  ARCHITECTURE.md  EXTENDING.md  PROFESSOR_GUIDE.md  SCIENCE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: index.css
ml/artifacts/: lstm_model.keras  metadata.json  scaler.joblib
ml/notebooks/: 02_eda.ipynb  (+3 more)
report/: Banana_Spoilage_Detection_Report_Final.docx  Banana_Spoilage_Detection_Report_Fixed.docx  Banana_Spoilage_Detection_Report_p.docx  Banana_Spoilage_Detectionaaaaa.docx  convert_report.py  fix_report_in_place.py  report_clean.md  report_pandoc.md  temp.docx  temp.md  test_math.py  test_para.py
(+20 files in other folders)
