[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banana-storage-saver-backend"
version = "0.1.0"
description = "FastAPI backend for the Intelligent Food Storage Saver (banana MVP)."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "structlog>=24.1",
  "websockets>=12.0",
]

[project.optional-dependencies]
ml = ["tensorflow>=2.16,<2.18"]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
